--- a/lib/package.json
+++ b/lib/package.json
@@ -27,5 +27,19 @@
         "ng-color-picker",
         "ngx-color-picker",
         "mat-color-picker"
-    ]
+    ],
+    "dependencies": {
+        "@angular/animations": "^5.0.0",
+        "@angular/cdk": "^5.0.0",
+        "@angular/common": "^5.0.0",
+        "@angular/compiler": "^5.0.0",
+        "@angular/core": "^5.0.0",
+        "@angular/forms": "^5.0.0",
+        "@angular/material": "^5.0.4",
+        "@angular/platform-browser": "^5.0.0",
+        "@angular/platform-browser-dynamic": "^5.0.0",
+        "core-js": "^2.4.1",
+        "rxjs": "^5.5.2",
+        "zone.js": "^0.8.14"
+    }
 }
