--- a/package.json
+++ b/package.json
@@ -25,11 +25,7 @@
     "@angular/platform-browser-dynamic": "^5.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14",
-    "conventional-changelog": "^1.1.7",
-    "cz-conventional-changelog": "^2.1.0",
-    "husky": "^0.14.3",
-    "validate-commit-msg": "^2.14.0"
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.6.1",
@@ -39,6 +35,9 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
+    "conventional-changelog": "^1.1.7",
+    "cz-conventional-changelog": "^2.1.0",
+    "husky": "^0.14.3",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -51,7 +50,8 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.4.2",
+    "validate-commit-msg": "^2.14.0"
   },
   "config": {
     "validate-commit-msg": {
