--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mat-color-picker",
+  "name": "material-community-components",
   "version": "1.2.3",
   "license": "MIT",
   "scripts": {
@@ -28,6 +28,7 @@
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
+    "@angular/router": "^5.2.4",
     "@angular-devkit/core": "0.3.1",
     "@angular/cli": "1.6.8",
     "@angular/compiler-cli": "^5.2.4",
