--- a/package.json
+++ b/package.json
@@ -14,34 +14,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.4",
-    "@angular/cdk": "^5.2.0",
-    "@angular/common": "^5.2.4",
-    "@angular/compiler": "^5.2.4",
-    "@angular/core": "^5.2.4",
-    "@angular/forms": "^5.2.4",
-    "@angular/material": "^5.2.0",
-    "@angular/platform-browser": "^5.2.4",
-    "@angular/platform-browser-dynamic": "^5.2.4",
+    "@angular/animations": "^5.2.6",
+    "@angular/cdk": "^5.2.2",
+    "@angular/common": "^5.2.6",
+    "@angular/compiler": "^5.2.6",
+    "@angular/core": "^5.2.6",
+    "@angular/forms": "^5.2.6",
+    "@angular/material": "^5.2.2",
+    "@angular/platform-browser": "^5.2.6",
+    "@angular/platform-browser-dynamic": "^5.2.6",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
     "@angular-devkit/core": "0.3.1",
-    "@angular/cli": "1.6.8",
-    "@angular/compiler-cli": "^5.2.4",
-    "@angular/language-service": "^5.2.4",
-    "@types/jasmine": "~2.5.53",
+    "@angular/cli": "1.7.1",
+    "@angular/compiler-cli": "^5.2.6",
+    "@angular/language-service": "^5.2.6",
+    "@types/jasmine": "~2.6.0",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
+    "@types/node": "^8.0.31",
     "codelyzer": "^4.0.1",
     "conventional-changelog": "^1.1.7",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^0.14.3",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
+    "jasmine-core": "~2.8.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.1",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
@@ -49,9 +49,10 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^1.6.0",
     "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
+    "ts-node": "~3.3.0",
     "tslint": "~5.9.1",
     "typescript": "~2.6.2",
+    "uglify-es": "3.3.8",
     "validate-commit-msg": "^2.14.0"
   },
   "config": {
