--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -4,7 +4,7 @@
     "version": "2.4.3",
     "ngPackage": {
         "lib": {
-            "entryFile": "src/index.ts"
+            "entryFile": "index.ts"
         },
         "dest": "dist"
     },
