chore: fix paths

--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "packagr": "ng-packagr -p lib/package.json && cp README.md dist/",
+    "packagr": "ng-packagr -p src/lib/package.json && cp README.md dist/",
     "commitmsg": "validate-commit-msg"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.6",
-    "@angular/cdk": "^5.2.2",
-    "@angular/common": "^5.2.6",
-    "@angular/compiler": "^5.2.6",
-    "@angular/core": "^5.2.6",
-    "@angular/forms": "^5.2.6",
-    "@angular/material": "^5.2.2",
-    "@angular/platform-browser": "^5.2.6",
-    "@angular/platform-browser-dynamic": "^5.2.6",
+    "@angular/animations": "^5.0.0",
+    "@angular/cdk": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/material": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.20"
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/router": "^5.2.4",
