--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "packagr": "ng-packagr -p src/lib/package.json && cp README.md dist/",
+    "packagr": "ng-packagr -p src/lib/package.json && cp README.md src/lib/dist/",
     "commitmsg": "validate-commit-msg"
   },
   "private": true,
