--- a/package.json
+++ b/package.json
@@ -30,23 +30,23 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/animations": "^5.2.8",
-    "@angular/cdk": "^5.2.4",
-    "@angular/common": "^5.2.8",
-    "@angular/compiler": "^5.2.8",
-    "@angular/core": "^5.2.8",
-    "@angular/router": "^5.2.4",
-    "@angular/forms": "^5.2.8",
-    "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^5.2.8",
-    "@angular/platform-browser-dynamic": "^5.2.8",
+    "@angular/animations": "6.0.0-rc.0",
+    "@angular/cdk": "6.0.0-rc.0",
+    "@angular/common": "6.0.0-rc.0",
+    "@angular/compiler": "6.0.0-rc.0",
+    "@angular/core": "6.0.0-rc.0",
+    "@angular/router": "6.0.0-rc.0",
+    "@angular/forms": "6.0.0-rc.0",
+    "@angular/material": "6.0.0-rc.0",
+    "@angular/platform-browser": "6.0.0-rc.0",
+    "@angular/platform-browser-dynamic": "6.0.0-rc.0",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.14",
-    "@angular-devkit/core": "0.3.1",
-    "@angular/cli": "1.7.1",
-    "@angular/compiler-cli": "^5.2.6",
-    "@angular/language-service": "^5.2.6",
+    "rxjs": "6.0.0-beta.1",
+    "zone.js": "^0.8.20",
+    "@angular-devkit/core": "0.4.8",
+    "@angular/cli": "6.0.0-beta.8",
+    "@angular/compiler-cli": "6.0.0-rc.0",
+    "@angular/language-service": "6.0.0-rc.0",
     "@types/jasmine": "~2.6.0",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^8.0.31",
@@ -66,7 +66,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.3.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.6.2",
+    "typescript": "~2.7.2",
     "uglify-es": "3.3.8",
     "validate-commit-msg": "^2.14.0"
   },
