--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
+    "build:docs": "ng build --prod --output-path docs --base-href material-community-components",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
