chore: copy index to 404

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "build:docs": "ng build --prod --output-path docs --base-href material-community-components",
+    "build:docs":
+      "ng build --prod --output-path docs --base-href material-community-components && cp docs/index.html docs/404.html",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
