--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -43,7 +43,7 @@
     "@angular/platform-browser": ">4.3.x",
     "@angular/platform-browser-dynamic": ">4.3.x",
     "core-js": "^2.4.1",
-    "rxjs": "^5.5.2",
+    "rxjs": ">=5.6.0-forward-compat.4",
     "zone.js": "^0.8.14"
   }
 }
