--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-community-components",
-  "version": "2.7.8",
+  "version": "3.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -16,42 +16,31 @@
   },
   "private": true,
   "peerDependencies": {
-    "@angular/animations": ">4.3.x",
-    "@angular/cdk": ">4.3.x",
-    "@angular/common": ">4.3.x",
-    "@angular/compiler": ">4.3.x",
-    "@angular/core": ">4.3.x",
-    "@angular/forms": ">4.3.x",
-    "@angular/material": ">4.3.x",
-    "@angular/platform-browser": ">4.3.x",
-    "@angular/platform-browser-dynamic": ">4.3.x",
     "core-js": "^2.4.1",
-    "rxjs": ">=5.6.0-forward-compat.4",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/animations": "^5.2.8",
-    "@angular/cdk": "^5.2.4",
-    "@angular/common": "^5.2.8",
-    "@angular/compiler": "^5.2.8",
-    "@angular/core": "^5.2.8",
-    "@angular/router": "^5.2.4",
-    "@angular/forms": "^5.2.8",
-    "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "^5.2.8",
-    "@angular/platform-browser-dynamic": "^5.2.8",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.6.0-forward-compat.4",
-    "zone.js": "^0.8.14",
+    "@angular-devkit/build-angular": "~0.6.0",
     "@angular-devkit/core": "0.3.1",
-    "@angular/cli": "1.7.1",
-    "@angular/compiler-cli": "^5.2.6",
-    "@angular/language-service": "^5.2.6",
+    "@angular/animations": "6.0.0",
+    "@angular/cdk": "^6.0.0",
+    "@angular/cli": "^6.0.0",
+    "@angular/common": "6.0.0",
+    "@angular/compiler": "6.0.0",
+    "@angular/compiler-cli": "6.0.0",
+    "@angular/core": "6.0.0",
+    "@angular/forms": "6.0.0",
+    "@angular/language-service": "6.0.0",
+    "@angular/material": "^6.0.0",
+    "@angular/platform-browser": "6.0.0",
+    "@angular/platform-browser-dynamic": "6.0.0",
+    "@angular/router": "6.0.0",
     "@types/jasmine": "~2.6.0",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^8.0.31",
     "codelyzer": "^4.0.1",
     "conventional-changelog": "^1.1.7",
+    "core-js": "^2.4.1",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^0.14.3",
     "jasmine-core": "~2.8.0",
@@ -64,11 +53,13 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^2.4.0",
     "protractor": "~5.1.2",
+    "rxjs": "6.1.0",
     "ts-node": "~3.3.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.6.2",
+    "typescript": "2.7.2",
     "uglify-es": "3.3.8",
-    "validate-commit-msg": "^2.14.0"
+    "validate-commit-msg": "^2.14.0",
+    "zone.js": "^0.8.14"
   },
   "config": {
     "validate-commit-msg": {
@@ -94,5 +85,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "rxjs-compat": "^6.0.0-rc.0"
   }
 }
