--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,17 +9,10 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es2017", "dom"],
     "paths": {
-      "mat-color-picker/*": [
-        "lib/src/*"
-      ]
+      "material-community-components": ["src/lib/*"]
     }
   }
 }
