chore: upgrade version

--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "material-community-components",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "build:docs":
-      "ng build --prod --output-path docs --base-href material-community-components && cp docs/index.html docs/404.html",
+    "build:docs": "ng build --prod --output-path docs --base-href material-community-components && cp docs/index.html docs/404.html",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
