--- a/package.json
+++ b/package.json
@@ -15,25 +15,24 @@
   },
   "private": true,
   "peerDependencies": {
-    "core-js": "^2.4.1",
-    "zone.js": "^0.8.14"
+    "core-js": "^2.4.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular-devkit/build-angular": "^0.11.2",
     "@angular-devkit/core": "0.3.1",
-    "@angular/animations": "6.0.0",
+    "@angular/animations": "7.1.2",
     "@angular/cdk": "^6.0.0",
-    "@angular/cli": "^6.0.0",
-    "@angular/common": "6.0.0",
-    "@angular/compiler": "6.0.0",
-    "@angular/compiler-cli": "6.0.0",
-    "@angular/core": "6.0.0",
-    "@angular/forms": "6.0.0",
-    "@angular/language-service": "6.0.0",
+    "@angular/cli": "7.1.2",
+    "@angular/common": "7.1.2",
+    "@angular/compiler": "7.1.2",
+    "@angular/compiler-cli": "7.1.2",
+    "@angular/core": "7.1.2",
+    "@angular/forms": "7.1.2",
+    "@angular/language-service": "7.1.2",
     "@angular/material": "^6.0.0",
-    "@angular/platform-browser": "6.0.0",
-    "@angular/platform-browser-dynamic": "6.0.0",
-    "@angular/router": "6.0.0",
+    "@angular/platform-browser": "7.1.2",
+    "@angular/platform-browser-dynamic": "7.1.2",
+    "@angular/router": "7.1.2",
     "@types/jasmine": "~2.6.0",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^8.0.31",
@@ -51,14 +50,14 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^2.4.0",
-    "protractor": "~5.1.2",
-    "rxjs": "6.1.0",
+    "protractor": "^5.4.1",
+    "rxjs": "6.3.3",
     "ts-node": "~3.3.0",
     "tslint": "~5.9.1",
-    "typescript": "2.7.2",
+    "typescript": "3.1.6",
     "uglify-es": "3.3.8",
     "validate-commit-msg": "^2.14.0",
-    "zone.js": "^0.8.14"
+    "zone.js": "0.8.26"
   },
   "config": {
     "validate-commit-msg": {
