--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-community-components",
-  "version": "3.2.1",
+  "version": "3.3.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -20,23 +20,23 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.11.2",
     "@angular-devkit/core": "0.3.1",
-    "@angular/animations": "7.1.2",
-    "@angular/cdk": "^6.0.0",
+    "@angular/animations": "7.1.3",
+    "@angular/cdk": "^7.1.1",
     "@angular/cli": "7.1.2",
-    "@angular/common": "7.1.2",
-    "@angular/compiler": "7.1.2",
-    "@angular/compiler-cli": "7.1.2",
-    "@angular/core": "7.1.2",
-    "@angular/forms": "7.1.2",
-    "@angular/language-service": "7.1.2",
-    "@angular/material": "^6.0.0",
-    "@angular/platform-browser": "7.1.2",
-    "@angular/platform-browser-dynamic": "7.1.2",
-    "@angular/router": "7.1.2",
+    "@angular/common": "7.1.3",
+    "@angular/compiler": "7.1.3",
+    "@angular/compiler-cli": "7.1.3",
+    "@angular/core": "7.1.3",
+    "@angular/forms": "7.1.3",
+    "@angular/language-service": "7.1.3",
+    "@angular/material": "^7.1.1",
+    "@angular/platform-browser": "7.1.3",
+    "@angular/platform-browser-dynamic": "7.1.3",
+    "@angular/router": "7.1.3",
     "@types/jasmine": "~2.6.0",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^8.0.31",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^4.5.0",
     "conventional-changelog": "^1.1.7",
     "core-js": "^2.4.1",
     "cz-conventional-changelog": "^2.1.0",
@@ -49,11 +49,14 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^2.4.0",
+    "ng-packagr": "^4.4.5",
     "protractor": "^5.4.1",
     "rxjs": "6.3.3",
+    "rxjs-compat": "^6.0.0-rc.0",
     "ts-node": "~3.3.0",
     "tslint": "~5.9.1",
+    "tslib": "1.9.3",
+    "tsickle": "0.34.0",
     "typescript": "3.1.6",
     "uglify-es": "3.3.8",
     "validate-commit-msg": "^2.14.0",
@@ -83,8 +86,5 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  },
-  "dependencies": {
-    "rxjs-compat": "^6.0.0-rc.0"
   }
 }
