--- a/angular.json
+++ b/angular.json
@@ -60,10 +60,10 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/demo-app/../../test.ts",
-            "karmaConfig": "./karma.conf.js",
+            "main": "./test.ts",
+            "karmaConfig": "test/karma.conf.js",
             "polyfills": "src/demo-app/polyfills.ts",
-            "tsConfig": "src/demo-app/tsconfig.spec.json",
+            "tsConfig": "test/tsconfig.spec.json",
             "scripts": [],
             "styles": ["src/demo-app/styles.scss"],
             "assets": ["src/demo-app/assets", "src/demo-app/favicon.ico"]
@@ -72,7 +72,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["demo-app/src/tsconfig.app.json", "demo-app/src/tsconfig.spec.json"],
+            "tsConfig": ["demo-app/src/tsconfig.app.json"],
             "exclude": ["**/node_modules/**"]
           }
         }
@@ -86,7 +86,7 @@
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "./protractor.conf.js",
+            "protractorConfig": "test/protractor.conf.js",
             "devServerTarget": "demo:serve"
           }
         },
@@ -133,8 +133,9 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "src/lib/../../test.ts",
-            "karmaConfig": "./karma.conf.js",
+            "main": "./test.ts",
+            "karmaConfig": "test/karma.conf.js",
+            "tsConfig": "test/tsconfig.spec.json",
             "scripts": [],
             "styles": [],
             "assets": []
@@ -143,7 +144,6 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["demo-app/src/tsconfig.app.json", "demo-app/src/tsconfig.spec.json"],
             "exclude": ["**/node_modules/**"]
           }
         }
@@ -157,7 +157,7 @@
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "./protractor.conf.js",
+            "protractorConfig": "test/protractor.conf.js",
             "devServerTarget": "material-community-components:serve"
           }
         },
