--- a/package.json
+++ b/package.json
@@ -38,26 +38,25 @@
     "@types/node": "^8.0.31",
     "codelyzer": "^4.5.0",
     "conventional-changelog": "^1.1.7",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.4",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^0.14.3",
-    "jasmine-core": "~2.8.0",
+    "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma": "~3.1.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^4.4.5",
-    "protractor": "^5.4.1",
+    "ng-packagr": "^4.2.0",
+    "protractor": "~5.4.0",
     "rxjs": "6.3.3",
     "rxjs-compat": "^6.0.0-rc.0",
-    "ts-node": "~3.3.0",
-    "tslint": "~5.9.1",
-    "tslib": "1.9.3",
-    "tsickle": "0.34.0",
-    "typescript": "3.1.6",
+    "ts-node": "~7.0.0",
+    "tslint": "~5.11.0",
+    "tslib": "1.9.0",
+    "tsickle": ">=0.29.0",
+    "typescript": "3.1.3",
     "uglify-es": "3.3.8",
     "validate-commit-msg": "^2.14.0",
     "zone.js": "0.8.26"
