--- a/angular.json
+++ b/angular.json
@@ -57,18 +57,6 @@
             "browserTarget": "demo:build"
           }
         },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "./test.ts",
-            "karmaConfig": "test/karma.conf.js",
-            "polyfills": "src/demo-app/polyfills.ts",
-            "tsConfig": "test/tsconfig.spec.json",
-            "scripts": [],
-            "styles": ["src/demo-app/styles.scss"],
-            "assets": ["src/demo-app/assets", "src/demo-app/favicon.ico"]
-          }
-        },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
@@ -110,10 +98,7 @@
             "outputPath": "dist/",
             "index": "src/lib/index.html",
             "main": "src/lib/main.ts",
-            "tsConfig": "src/lib/tsconfig.app.json",
-            "assets": [],
-            "styles": [],
-            "scripts": []
+            "tsConfig": "src/lib/tsconfig.app.json"
           },
           "configurations": {}
         },
@@ -133,12 +118,9 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "./test.ts",
+            "main": "test/test.ts",
             "karmaConfig": "test/karma.conf.js",
-            "tsConfig": "test/tsconfig.spec.json",
-            "scripts": [],
-            "styles": [],
-            "assets": []
+            "tsConfig": "test/tsconfig.spec.json"
           }
         },
         "lint": {
