--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
-    "build:docs": "ng build --prod --outputPath docs --baseHref material-community-components && cp docs/index.html docs/404.html",
+    "build:docs": "ng build --prod --baseHref \"https://tiaguinho.github.io/material-community-components/\" && cp dist/material-community-components/index.html dist/material-community-components/404.html",
+    "docs:deploy": "npx angular-cli-ghpages --dir=dist/material-community-components",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
