--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build --prod",
+    "build:lib:scss": "scss-bundle -c scss-bundle.config.json",
     "build:docs": "ng build --prod --baseHref \"https://tiaguinho.github.io/material-community-components/\" && cp dist/material-community-components/index.html dist/material-community-components/404.html",
     "docs:deploy": "npx angular-cli-ghpages --dir=dist/material-community-components",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "packagr": "ng-packagr -p src/lib/package.json && cp README.md src/lib/dist/",
+    "packagr": "ng-packagr -p src/lib/package.json && yarn build:lib:scss && cp README.md src/lib/dist/",
     "commitmsg": "validate-commit-msg"
   },
   "private": true,
@@ -54,9 +55,9 @@
     "rxjs": "6.3.3",
     "rxjs-compat": "^6.0.0-rc.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "tslib": "1.9.0",
     "tsickle": ">=0.29.0",
+    "tslib": "1.9.0",
+    "tslint": "~5.11.0",
     "typescript": "3.1.3",
     "uglify-es": "3.3.8",
     "validate-commit-msg": "^2.14.0",
@@ -87,5 +88,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "scss-bundle": "^2.5.1"
   }
 }
