--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-community-components",
-  "version": "3.4.1",
+  "version": "3.4.2",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -20,48 +20,47 @@
     "core-js": "^2.4.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.11.2",
-    "@angular-devkit/core": "0.3.1",
-    "@angular/animations": "7.1.3",
-    "@angular/cdk": "^7.1.1",
-    "@angular/cli": "7.1.2",
-    "@angular/common": "7.1.3",
-    "@angular/compiler": "7.1.3",
-    "@angular/compiler-cli": "7.1.3",
-    "@angular/core": "7.1.3",
-    "@angular/forms": "7.1.3",
-    "@angular/language-service": "7.1.3",
-    "@angular/material": "^7.1.1",
-    "@angular/platform-browser": "7.1.3",
-    "@angular/platform-browser-dynamic": "7.1.3",
-    "@angular/router": "7.1.3",
-    "@types/jasmine": "~2.6.0",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.0.31",
-    "codelyzer": "^4.5.0",
-    "conventional-changelog": "^1.1.7",
-    "core-js": "^2.5.4",
+    "@angular-devkit/build-angular": "~0.800.0",
+    "@angular-devkit/core": "0.4.5",
+    "@angular/animations": "^8.0.1",
+    "@angular/cdk": "^8.0.1",
+    "@angular/cli": "^8.0.3",
+    "@angular/common": "^8.0.1",
+    "@angular/compiler": "^8.0.1",
+    "@angular/compiler-cli": "^8.0.1",
+    "@angular/core": "^8.0.1",
+    "@angular/forms": "^8.0.1",
+    "@angular/language-service": "^8.0.1",
+    "@angular/material": "^8.0.1",
+    "@angular/platform-browser": "^8.0.1",
+    "@angular/platform-browser-dynamic": "^8.0.1",
+    "@angular/router": "^8.0.1",
+    "@types/jasmine": "~3.3.13",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/node": "^10.14.9",
+    "codelyzer": "^5.1.0",
+    "conventional-changelog": "^3.1.8",
+    "core-js": "^3.1.4",
     "cz-conventional-changelog": "^2.1.0",
-    "husky": "^0.14.3",
-    "jasmine-core": "~2.99.1",
+    "husky": "^2.4.1",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^4.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^5.3.0",
     "protractor": "~5.4.0",
-    "rxjs": "6.3.3",
-    "rxjs-compat": "^6.0.0-rc.0",
+    "rxjs": "^6.4.0",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.29.0",
-    "tslib": "1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "3.1.3",
+    "tsickle": ">=0.35.0",
+    "tslib": "1.10.0",
+    "tslint": "~5.17.0",
+    "typescript": "3.4.5",
     "uglify-es": "3.3.8",
     "validate-commit-msg": "^2.14.0",
-    "zone.js": "0.8.26"
+    "zone.js": "^0.9.1"
   },
   "config": {
     "validate-commit-msg": {
