--- a/src/lib/tsconfig.spec.json
+++ b/src/lib/tsconfig.spec.json
@@ -4,7 +4,7 @@
     "outDir": "./out-tsc/spec",
     "baseUrl": "./",
     "module": "commonjs",
-    "target": "es5",
+    "target": "esnext",
     "types": [
       "jasmine",
       "node"
