--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,9 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es5",
+    "target": "esnext",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"],
+    "lib": ["esnext", "dom"],
     "paths": {
       "material-community-components": ["src/lib/*"]
     }
