--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "../../node_modules/ng-packagr/package.schema.json",
   "name": "material-community-components",
-  "version": "3.4.1",
+  "version": "3.4.2",
   "ngPackage": {
     "lib": {
       "entryFile": "index.ts"
@@ -33,17 +33,17 @@
     "material-community-components"
   ],
   "peerDependencies": {
-    "@angular/animations": ">4.3.x",
-    "@angular/cdk": ">4.3.x",
-    "@angular/common": ">4.3.x",
-    "@angular/compiler": ">4.3.x",
-    "@angular/core": ">4.3.x",
-    "@angular/forms": ">4.3.x",
-    "@angular/material": ">4.3.x",
-    "@angular/platform-browser": ">4.3.x",
-    "@angular/platform-browser-dynamic": ">4.3.x",
+    "@angular/animations": ">8.0.x",
+    "@angular/cdk": ">8.0.x",
+    "@angular/common": ">8.0.x",
+    "@angular/compiler": ">8.0.x",
+    "@angular/core": ">8.0.x",
+    "@angular/forms": ">8.0.x",
+    "@angular/material": ">8.0.x",
+    "@angular/platform-browser": ">8.0.x",
+    "@angular/platform-browser-dynamic": ">8.0.x",
     "core-js": "^2.4.1",
-    "rxjs": ">=5.6.0-forward-compat.4",
-    "zone.js": "^0.8.14"
+    "rxjs": ">=6.4.x",
+    "zone.js": "^0.9.1"
   }
 }
