--- a/package.json
+++ b/package.json
@@ -19,25 +19,25 @@
     "core-js": "^3.1.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.20",
+    "@angular-devkit/build-angular": "~0.900.0-rc.6",
     "@angular-devkit/core": "8.3.20",
-    "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^8.2.3",
-    "@angular/cli": "^8.3.20",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/language-service": "^8.0.1",
+    "@angular/animations": "^9.0.0-rc.6",
+    "@angular/cdk": "^9.0.0-rc.5",
+    "@angular/cli": "^9.0.0-rc.6",
+    "@angular/common": "^9.0.0-rc.6",
+    "@angular/compiler": "^9.0.0-rc.6",
+    "@angular/compiler-cli": "^9.0.0-rc.6",
+    "@angular/core": "^9.0.0-rc.6",
+    "@angular/forms": "^9.0.0-rc.6",
+    "@angular/language-service": "^9.0.0-rc.6",
     "@angular/material": "^9.0.0-rc.5",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/platform-browser": "^9.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "^9.0.0-rc.6",
+    "@angular/router": "^9.0.0-rc.6",
     "@types/jasmine": "~3.3.13",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^10.14.9",
-    "codelyzer": "^5.1.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "conventional-changelog": "^3.1.8",
     "core-js": "^3.1.4",
     "cz-conventional-changelog": "^2.1.0",
@@ -49,17 +49,15 @@
     "karma-coverage-istanbul-reporter": "~2.0.5",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^5.3.0",
+    "ng-packagr": "^9.0.0-rc.3",
     "protractor": "~5.4.0",
     "rxjs": "^6.4.0",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.35.0",
-    "tslib": "1.10.0",
     "tslint": "~5.17.0",
-    "typescript": "3.5.3",
+    "typescript": "3.6.4",
     "uglify-es": "3.3.8",
     "validate-commit-msg": "^2.14.0",
-    "zone.js": "^0.9.1"
+    "zone.js": "~0.10.2"
   },
   "config": {
     "validate-commit-msg": {
@@ -88,7 +86,8 @@
     }
   },
   "dependencies": {
-    "scss-bundle": "^2.5.1"
+    "scss-bundle": "^2.5.1",
+    "tslib": "^1.10.0"
   },
   "husky": {
     "hooks": {
