--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-community-components",
-  "version": "5.0.1",
+  "version": "6.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -19,45 +19,45 @@
     "core-js": "^3.1.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.1",
-    "@angular-devkit/core": "9.0.1",
-    "@angular/animations": "^9.0.0",
-    "@angular/cdk": "^9.0.0",
-    "@angular/cli": "^9.0.1",
-    "@angular/common": "^9.0.0",
-    "@angular/compiler": "^9.0.0",
-    "@angular/compiler-cli": "^9.0.0",
-    "@angular/core": "^9.0.0",
-    "@angular/forms": "^9.0.0",
-    "@angular/language-service": "^9.0.0",
-    "@angular/material": "^9.0.0",
-    "@angular/platform-browser": "^9.0.0",
-    "@angular/platform-browser-dynamic": "^9.0.0",
-    "@angular/router": "^9.0.0",
-    "@types/jasmine": "~3.3.13",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "conventional-changelog": "^3.1.8",
-    "core-js": "^3.1.4",
-    "cz-conventional-changelog": "^2.1.0",
-    "husky": "^2.4.1",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.5",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
-    "ng-packagr": "^9.0.0",
-    "protractor": "~5.4.0",
+    "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-devkit/core": "^9.1.0",
+    "@angular/animations": "^9.1.0",
+    "@angular/cdk": "^9.2.0",
+    "@angular/cli": "^9.1.0",
+    "@angular/common": "^9.1.0",
+    "@angular/compiler": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.0",
+    "@angular/core": "^9.1.0",
+    "@angular/forms": "^9.1.0",
+    "@angular/language-service": "^9.1.0",
+    "@angular/material": "^9.2.0",
+    "@angular/platform-browser": "^9.1.0",
+    "@angular/platform-browser-dynamic": "^9.1.0",
+    "@angular/router": "^9.1.0",
+    "@types/jasmine": "^3.5.10",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^13.9.5",
+    "codelyzer": "^5.2.2",
+    "conventional-changelog": "^3.1.18",
+    "core-js": "^3.6.4",
+    "cz-conventional-changelog": "^3.1.0",
+    "husky": "^4.2.3",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "~5.0.1",
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.1",
+    "karma-jasmine": "~3.1.1",
+    "karma-jasmine-html-reporter": "~1.5.3",
+    "ng-packagr": "^9.1.0",
+    "protractor": "~5.4.3",
     "rxjs": "^6.5.4",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.17.0",
-    "typescript": "3.7.5",
-    "uglify-es": "3.3.8",
+    "ts-node": "~8.8.1",
+    "tslint": "~6.1.0",
+    "typescript": "^3.8.3",
+    "uglify-es": "^3.3.9",
     "validate-commit-msg": "^2.14.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.3"
   },
   "config": {
     "validate-commit-msg": {
