chore: update angular-gh-pages

--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "start": "ng serve",
     "build": "ng build --prod",
     "build:lib:scss": "scss-bundle -c scss-bundle.config.json",
-    "build:docs": "ng build --prod --base-href https://tiaguinho.github.io/material-community-components/",
-    "docs:deploy": "npx ngh --dir=dist/material-community-components",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -37,6 +35,7 @@
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^13.9.5",
+    "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^5.2.2",
     "conventional-changelog": "^3.1.18",
     "core-js": "^3.6.4",
