--- a/angular.json
+++ b/angular.json
@@ -17,8 +17,13 @@
             "main": "src/demo-app/main.ts",
             "tsConfig": "src/demo-app/tsconfig.app.json",
             "polyfills": "src/demo-app/polyfills.ts",
-            "assets": ["src/demo-app/assets", "src/demo-app/favicon.ico"],
-            "styles": ["src/demo-app/styles.scss"],
+            "assets": [
+              "src/demo-app/assets",
+              "src/demo-app/favicon.ico"
+            ],
+            "styles": [
+              "src/demo-app/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -67,9 +72,17 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["demo-app/src/tsconfig.app.json"],
-            "exclude": ["**/node_modules/**"]
+            "tsConfig": [
+              "demo-app/src/tsconfig.app.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
         }
       }
     },
@@ -88,8 +101,12 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["demo-app/e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**"]
+            "tsConfig": [
+              "demo-app/e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -134,7 +151,9 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
@@ -154,8 +173,12 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["demo-app/e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**"]
+            "tsConfig": [
+              "demo-app/e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         }
       }
