build(deps): upgrade angular cli from 9 to 10

--- a/angular.json
+++ b/angular.json
@@ -188,9 +188,9 @@
   "schematics": {
     "@schematics/angular:component": {
       "changeDetection": "OnPush",
-      "spec": false,
+      "skipTests": true,
       "prefix": "app",
-      "styleext": "scss"
+      "style": "scss"
     },
     "@schematics/angular:directive": {
       "prefix": "app"
