--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,20 @@
+/*
+  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
+  It is not intended to be used to perform a compilation.
+
+  To learn more about this file see: https://angular.io/config/solution-tsconfig.
+*/
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "module": "esnext",
-    "outDir": "./dist/out-tsc",
-    "baseUrl": ".",
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "esnext",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["esnext", "dom"],
-    "paths": {
-      "material-community-components": ["src/lib/*"]
+  "files": [],
+  "references": [
+    {
+      "path": "./src/demo-app/tsconfig.app.json"
+    },
+    {
+      "path": "./src/lib/tsconfig.app.json"
+    },
+    {
+      "path": "./src/lib/tsconfig.spec.json"
     }
-  }
+  ]
 }
