feat(color-picker): set selector pos by color, tinycolor for much easier color management

--- a/angular.json
+++ b/angular.json
@@ -189,7 +189,7 @@
       "style": "scss"
     },
     "@schematics/angular:directive": {
-      "prefix": "app"
+      "prefix": "mcc"
     }
   }
 }
