chore: add coveralls

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,4 +22,5 @@ install:
 
 script:
   - yarn test -- --no-watch --no-progress --code-coverage --browsers=ChromeHeadlessCI
+  - cat ./coverages/lcov.info | coveralls
 
