--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "codelyzer": "^5.2.2",
     "conventional-changelog": "^3.1.18",
     "core-js": "^3.6.4",
+    "coveralls": "^3.1.0",
     "cz-conventional-changelog": "^3.1.0",
     "husky": "^4.2.3",
     "jasmine-core": "~3.5.0",
