feat(color-picker): change color of picker element on change, fixed tests, refactorings

--- a/angular.json
+++ b/angular.json
@@ -180,7 +180,7 @@
       }
     }
   },
-  "defaultProject": "demo",
+  "defaultProject": "material-community-components",
   "schematics": {
     "@schematics/angular:component": {
       "changeDetection": "OnPush",
