chore: fix scss-bundle build options

--- a/scss-bundle.config.json
+++ b/scss-bundle.config.json
@@ -1,4 +1,6 @@
 {
-  "entry": "./src/lib/_theming.scss",
-  "dest": "./src/lib/dist/_theming.scss"
+  "bundlerOptions": {
+    "entryFile": "./src/lib/_theming.scss",
+    "outFile": "./src/lib/dist/_theming.scss"
+  }
 }
