feat: separate packages in small submodules
Closes #150

--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -4,7 +4,7 @@
   "version": "7.1.0",
   "ngPackage": {
     "lib": {
-      "entryFile": "index.ts"
+      "entryFile": "public_api.ts"
     },
     "dest": "dist"
   },
