fix: Component-@Inputs do work with "strictTemplates" set in angularCompilerOptions

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -36,6 +36,8 @@
     }
   },
   "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
+    "strictTemplates": true
   }
 }
