--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-community-components",
-  "version": "9.0.0",
+  "version": "9.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -10,6 +10,7 @@
     "docs": "ng deploy --base-href=https://tiaguinho.github.io/material-community-components/",
     "test": "ng test material-community-components",
     "lint": "ng lint",
+    "deploy:gh-pages": "ng run demo:deploy",
     "e2e": "ng e2e",
     "packagr": "yarn build && yarn build:lib:scss && cp README.md dist/material-community-components",
     "postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points"
