build(deps-dev): upgrade angular cli from 10.2.0 to 11.0.1

--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,7 @@
       "prefix": "mcc",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/material-community-components/tsconfig.lib.json",
             "project": "projects/material-community-components/ng-package.json"
@@ -89,7 +89,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
