--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "core-js": "^3.6.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular-devkit/build-ng-packagr": "~0.1002.0",
-    "@angular-devkit/core": "^10.2.0",
+    "@angular-devkit/build-angular": "~0.1100.1",
+    "@angular-devkit/core": "^11.0.1",
     "@angular/animations": "^11.0.0",
     "@angular/cdk": "^10.2.5",
-    "@angular/cli": "^10.2.0",
+    "@angular/cli": "^11.0.1",
     "@angular/common": "^11.0.0",
     "@angular/compiler": "^11.0.0",
     "@angular/compiler-cli": "^11.0.0",
@@ -36,25 +35,25 @@
     "@angular/platform-browser": "^11.0.0",
     "@angular/platform-browser-dynamic": "^11.0.0",
     "@angular/router": "^11.0.0",
-    "@types/jasmine": "^3.5.14",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^14.14.2",
     "@types/tinycolor2": "^1.4.2",
     "angular-cli-ghpages": "^0.6.2",
-    "codelyzer": "^6.0.1",
+    "codelyzer": "^6.0.0",
     "conventional-changelog": "^3.1.23",
     "core-js": "^3.6.4",
     "coveralls": "^3.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^4.3.0",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
+    "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
-    "ng-packagr": "^10.1.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^11.0.2",
     "protractor": "~7.0.0",
     "rxjs": "^6.6.3",
     "ts-node": "~9.0.0",
@@ -92,7 +91,7 @@
   },
   "dependencies": {
     "scss-bundle": "^3.1.2",
-    "tslib": "^2.0.3",
+    "tslib": "^2.0.0",
     "@thebespokepixel/es-tinycolor": "^2.1.1"
   },
   "husky": {
