--- a/projects/material-community-components/tsconfig.lib.json
+++ b/projects/material-community-components/tsconfig.lib.json
@@ -3,6 +3,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
+    "declarationMap": true,
     "declaration": true,
     "inlineSources": true
   },
