build(dpes): bump angular material 13

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve demo --aot",
+    "start": "ng serve demo",
     "build": "ng build material-community-components --configuration production",
     "copy:scss": "cp ./projects/material-community-components/_theming.scss ./dist/material-community-components/_theming.scss",
     "docs": "ng deploy --base-href=https://tiaguinho.github.io/material-community-components/",
@@ -24,7 +24,7 @@
     "@angular-devkit/build-angular": "~13.0.1",
     "@angular-devkit/core": "^13.0.1",
     "@angular/animations": "^13.0.0",
-    "@angular/cdk": "^12.1.1",
+    "@angular/cdk": "^13.0.0",
     "@angular/cli": "^13.0.1",
     "@angular/common": "^13.0.0",
     "@angular/compiler": "^13.0.0",
@@ -32,7 +32,7 @@
     "@angular/core": "^13.0.0",
     "@angular/forms": "^13.0.0",
     "@angular/language-service": "^13.0.0",
-    "@angular/material": "^12.1.1",
+    "@angular/material": "^13.0.0",
     "@angular/platform-browser": "^13.0.0",
     "@angular/platform-browser-dynamic": "^13.0.0",
     "@angular/router": "^13.0.0",
